--- a/web1/src/app/admin/role/role.component.html
+++ b/web1/src/app/admin/role/role.component.html
@@ -59,7 +59,7 @@
                                             <th  style="text-align: left;">Module Name</th>
                                             <th>ModuleView</th>
                                             <th>View</th>
-                                            <th>Edit</th>
+                                            <th>Edit/Disable</th>
                                             <th>Add</th>
                                             <th>Delete</th>
                                         </tr>
