--- a/web1/src/app/report/eyetest-report/eyetest-report.component.html
+++ b/web1/src/app/report/eyetest-report/eyetest-report.component.html
@@ -27,13 +27,13 @@
                                         <mat-form-field class="example-full-width mb-0">
                                             <mat-label>From</mat-label>
                                             <input matInput name="FromDate" type="date" [(ngModel)]="data.FromDate"
-                                                #DOBcontrol />
+                                                #DOBcontrol [disabled]="!editEyeTestReport"/>
                                         </mat-form-field>
                                     </div>
                                     <div class="col-xl-2 col-lg-2 col-md-6 col-sm-12 mb-0 ">
                                         <mat-form-field class="example-full-width mb-0">
                                             <mat-label>To</mat-label>
-                                            <input matInput type="date" name="ToDate" [(ngModel)]="data.ToDate" />
+                                            <input matInput type="date" name="ToDate" [(ngModel)]="data.ToDate" [disabled]="!editEyeTestReport"/>
                                         </mat-form-field>
                                     </div>
                                     <div class="col-xl-2 col-lg-2 col-md-6 col-sm-12 mb-0">
