--- a/web1/src/app/report/sale-report/sale-report.component.html
+++ b/web1/src/app/report/sale-report/sale-report.component.html
@@ -30,7 +30,7 @@
                                                 <mat-form-field class="example-full-width mb-0">
                                                     <mat-label>From</mat-label>
                                                     <input matInput name="FromDate" type="date"
-                                                        [(ngModel)]="BillMaster.FromDate" #DOBcontrol [disabled]="!editSaleReport" />
+                                                     (change)="getChangeDate()"   [(ngModel)]="BillMaster.FromDate" #DOBcontrol [disabled]="!editSaleReport" />
                                                 </mat-form-field>
                                             </div>
                                             <div class="col-xl-2 col-lg-2 col-md-6 col-sm-12 mb-0 ">
@@ -97,8 +97,8 @@
                                                     <mat-label>Payment Status</mat-label>
                                                     <mat-select name="PaymentStatus"
                                                         [(ngModel)]="BillMaster.PaymentStatus">
-                                                        <mat-option [value]="0">All</mat-option>
-                                                        <mat-option value="Paid">Paid</mat-option>
+                                                        <mat-option [value]="0" *ngIf="this.employeeHide">All</mat-option>
+                                                        <mat-option value="Paid" *ngIf="this.employeeHide">Paid</mat-option>
                                                         <mat-option value="Unpaid">Unpaid</mat-option>
                                                     </mat-select>
                                                 </mat-form-field>
@@ -108,9 +108,9 @@
                                                     <mat-label>Product Status</mat-label>
                                                     <mat-select name="ProductStatus"
                                                         [(ngModel)]="BillMaster.ProductStatus">
-                                                        <mat-option value="All">All</mat-option>
+                                                        <mat-option value="All" *ngIf="this.employeeHide">All</mat-option>
                                                         <mat-option value="0">Pending</mat-option>
-                                                        <mat-option value="1">Deliverd</mat-option>
+                                                        <mat-option value="1" *ngIf="this.employeeHide">Deliverd</mat-option>
                                                     </mat-select>
                                                 </mat-form-field>
                                             </div>
