--- a/web1/src/app/sale/billing/billing.component.css
+++ b/web1/src/app/sale/billing/billing.component.css
@@ -19,6 +19,21 @@
     font-weight: 500;
     border-radius: 0px;
 }
+
+.search {
+    overflow-y: scroll;
+    flex: 0 0 auto;
+    width: 28%;
+    max-height: 125px;
+    background-color: #2e3457;
+    color: #fff;
+    padding: 0;
+    margin: 0;
+    position: absolute;
+    z-index: 99999;
+    top: 64px;
+}
+
 @import "~@ng-select/ng-select/themes/default.theme.css";
 
 @import "~@ng-select/ng-select/themes/material.theme.css";
@@ -95,26 +110,27 @@
 .visible-scrollbar,
 .invisible-scrollbar,
 .mostly-customized-scrollbar {
-  display: block;
-  overflow: auto;
+    display: block;
+    overflow: auto;
 
 }
 
 .invisible-scrollbar::-webkit-scrollbar {
-  display: none;
+    display: none;
 }
 
 /* Demonstrate a "mostly customized" scrollbar
  * (won't be visible otherwise if width/height is specified) */
 .mostly-customized-scrollbar::-webkit-scrollbar {
-  width: 5px;
-  height: 8px;
-  background-color: #aaa; /* or add it to the track */
+    width: 5px;
+    height: 8px;
+    background-color: #aaa;
+    /* or add it to the track */
 }
 
 /* Add a thumb */
 .mostly-customized-scrollbar::-webkit-scrollbar-thumb {
-  background: rgb(62, 79, 173);
+    background: rgb(62, 79, 173);
 }
 
 .table thead tr th {
@@ -143,7 +159,7 @@
     transition: 0.5s;
     cursor: pointer;
     box-shadow: 2px 2px 6px #9c9795fa;
-    
+
 }
 
 .deletes_icon {
@@ -190,7 +206,7 @@
 }
 
 .ng-select .ng-select-container {
-    color: rgba(0,0,0,0.87);
+    color: rgba(0, 0, 0, 0.87);
     align-items: baseline !important;
     min-height: 51.5px !important;
 }
@@ -210,7 +226,6 @@
 
 input::-webkit-outer-spin-button,
 input::-webkit-inner-spin-button {
-  -webkit-appearance: none;
-  margin: 0;
+    -webkit-appearance: none;
+    margin: 0;
 }
-
